--- a/angular/_boilerplate/index.html
+++ b/angular/_boilerplate/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Angular Boilerplate</title>
-  <!-- syles -->
+  <!-- styles -->
   <link href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/yeti/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="main.css" rel="stylesheet" media="screen">
 </head>
