--- a/angular/services/index.html
+++ b/angular/services/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div ng-controller="myController">
         <h1>Enter Quantity:</h1>
-        <input type="number" ng-model="quantity"></p>
+        <p><input type="number" ng-model="quantity"></p>
         <h2>Total Cost: {{calculate(quantity) | currency}}</h2>
       </div>
     </div>
