--- a/angular/waitstaff-calc/index.html
+++ b/angular/waitstaff-calc/index.html
@@ -21,7 +21,7 @@
           <h2>Meal Details</h2>
           <br>
           <!-- call validate() function on click/submit -->
-          <form name="mealForm" ng-submit="validate(); submitted=true;"> 
+          <form name="mealForm" ng-submit="validate(); submitted=true;">
             <div class="form-group">
               <input class="form-input" type="number" placeholder="Enter the meal price ..." name="mealData.mealPrice" ng-model="mealData.mealPrice" min="0" step=".01" required>
             </div>
@@ -30,10 +30,10 @@
             </div>
             <div class="form-group">
               <input class="form-input" type="number" placeholder="Enter the tip percentage ..." name="mealData.tipRate" ng-model="mealData.tipRate" min="0" max="100" step=".01" required>
-            </div>          
+            </div>
             <input class="btn btn-default btn-sm" type="submit" value="Submit">
-            <input class="btn btn-default btn-sm" type="button" value="Clear" ng-click="clear()"> 
-            <br><br>        
+            <input class="btn btn-default btn-sm" type="button" value="Clear" ng-click="clear()">
+            <br><br>
           </form>
           <br>
         </div>
@@ -55,14 +55,14 @@
               <br>
               <p>Total Tips: {{ earnings.tip_total | currency}}</p>
               <p>Meal count: {{ earnings.meal_count }}<p>
-              <p>Average tip: {{ earnings.avg_tip | currency }}<p> 
+              <p>Average tip: {{ earnings.avg_tip | currency }}<p>
               <br>
               <div class="centered">
                 <input class="btn btn-default btn-sm" type="button" value="Reset" ng-click="reset()">
               </div>
-            </div>        
+            </div>
           </div>
-        </div>  
+        </div>
 
       </div>
       <!-- for my sanity -->
@@ -79,7 +79,7 @@
     <!-- scripts -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js" type="text/javascript"></script>
     <script src="main.js"></script>
 
   </body>
