--- a/angular/waitstaff-final/index.html
+++ b/angular/waitstaff-final/index.html
@@ -25,16 +25,13 @@
                     </header>
                     <form name="inputForm" ng-controller="inputController" ng-submit="submit()">
                         <div class="form-group">
-                            <label for="meal_price" required>Meal Price: $</label>
-                            <input type="number" name="meal_price" id="meal_price" ng-model="input.meal_price" min="1" step=".01" required>
+                            <input class="form-input" type="number" placeholder="Meal Price: $" name="meal_price" id="meal_price" ng-model="input.meal_price" min="1" step=".01" required>
                         </div>
                         <div class="form-group">
-                            <label for="tax_rate" required>Tax Rate: %</label>
-                            <input type="number" name="tax_rate" id="tax_rate" ng-model="input.tax_rate" min="1" max="50" required>
+                            <input class="form-input" type="number" placeholder="Tax Rate: %" name="tax_rate" id="tax_rate" ng-model="input.tax_rate" min="1" max="50" required>
                         </div>
                         <div class="form-group">
-                            <label for="tip_percent" required>Tip Percentage: %</label>
-                            <input type="number" name="tip_percent" id="tip_percent" ng-model="input.tip_percent" min="1" max="50" required>
+                            <input class="form-input" type="number" placeholder="Tip Percentage: %" name="tip_percent" id="tip_percent" ng-model="input.tip_percent" min="1" max="50" required>
                         </div>
                         <input class="btn btn-default btn-sm" type="submit" value="Submit">
                         <input class="btn btn-default btn-sm" type="button" value="Clear" ng-click="cancel()">
