--- a/angular/controller-syntax/index.html
+++ b/angular/controller-syntax/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ng-Show and ng-Hide Example</title>
+    <title>controller syntax</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
