--- a/angular/built-in-directives/ngClick/index.html
+++ b/angular/built-in-directives/ngClick/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html ng-app="app">
   <head>
-    <title>ngShow + ngHide Example</title>
+    <title>ngClick Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
-      <h1>ngShow + ngHide Example</h1>
+      <h1>ngClick Example</h1>
         <br>
         <div ng-controller="MainController">
-            <h2>{{ val }}</h2>
-            <button type="button" class="btn btn-default" ng-click="increment()">Increment</button>
-            <h2 ng-show="isEven">even</h2>
-            <h2 ng-hide="isEven">odd</h2>
+          <h2>{{ val }}</h2>
+          <button type="button" class="btn btn-default" ng-click="increment()">Increment</button>
         </div>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
