--- a/angular/projects/madlibs/part4/index.html
+++ b/angular/projects/madlibs/part4/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <!-- results -->
-    <div ng-show="hideForm && madForm.$valid" class="row content">
+    <div ng-show="hideForm && madForm.$valid" class="row content results">
         <div class="col-md-8 col-md-offset-2 border override">
             <p><span class="standout">{{data.name}}</span> was a <span class="standout">{{data.job_title}}</span> who loved technology. Although {{gender.pronoun}} loved parts of {{poss}} job, {{gender.pronoun}} absolutely hated  <span class="standout">{{data.tedious_task}}</span> and <span class="standout">{{data.dirty_task}}</span>. So, <span class="standout">{{data.my_name}}</span> met with {{poss}} life mentor <span class="standout">{{data.celebrity}}</span> who told {{poss}} to learn how to <span class="standout">{{data.useless_skill}}</span> with Thinkful. Thinkful didn't offer a course on <span class="standout">{{data.useless_skill}}</span> so {{gender.pronoun}} studied programming instead.</p>
             <p>What a great decision! With {{poss}} new skills, <span class="standout">{{data.my_name}}</span> built a(n) <span class="standout">{{data.adjective}}</span> robot named <span class="standout">{{data.obnoxiuous_celebrity}}</span> that not only loved <span class="standout">{{data.dirty_task}}</span> but did it <span class="standout">{{data.huge_number}}</span> faster.</p>
@@ -72,6 +72,7 @@
 
     <!-- scripts -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-animate.min.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
