--- a/angular/projects/animation-basics/part3/index.html
+++ b/angular/projects/animation-basics/part3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular Animation - part 1</title>
+  <title>Angular Animation - part 3</title>
   <!-- styles -->
   <link href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/yeti/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="main.css" rel="stylesheet" media="screen">
@@ -10,13 +10,15 @@
   <body>
     <div class="container">
       <div ng-app='animateApp' ng-controller="animateController">
-        <h1>Angular Animation - part 1</h1>
+        <h1>Angular Animation - part 3</h1>
         <br><br>
-        <!-- on click, fade is set to true, adding it to the DOM -->
-        <button type="button" class="btn btn-primary" ng-click="fade = !fade">Toggle Opacity</button>
-        <h2 ng-class="{fade:fade}">Hello World!</h2>
+        <button type="button" class="btn btn-primary btn-sm" ng-click="showRectangle = !showRectangle;">Toggle the rectangle</button>
+        <button type="button" class="btn btn-success btn-sm" ng-click="extraClass = !extraClass">Add another class</button>
         <br>
-        <p>Value of fade: <strong>{{fade}}</strong></p>
+        <br>
+        <p>Show Rectangle: <strong>{{ showRectangle }}</strong><p>
+        <p>Additional Class: <strong>{{ extraClass }}<strong></p>
+        <div id="rectangle" class="btn btn-warning" ng-show="showRectangle" class="animate-rectangle" ng-class="{ extra: extraClass }">i am the rectangle</div>
       </div>
     </div>
     <!-- scripts -->
@@ -27,3 +29,4 @@
     <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
+
