--- a/angular/projects/animation-basics/part3/index.html
+++ b/angular/projects/animation-basics/part3/index.html
@@ -16,9 +16,9 @@
         <button type="button" class="btn btn-success btn-sm" ng-click="extraClass = !extraClass">Add another class</button>
         <br>
         <br>
-        <p>Show Rectangle: <strong>{{ showRectangle }}</strong><p>
-        <p>Additional Class: <strong>{{ extraClass }}<strong></p>
-        <div id="rectangle" class="btn btn-warning" ng-show="showRectangle" class="animate-rectangle" ng-class="{ extra: extraClass }">i am the rectangle</div>
+        <p>Show Rectangle: <strong>{{ showRectangle }}</strong></p>
+        <p>Additional Class: <strong>{{ extraClass }}</strong></p>
+        <div id="rectangle" ng-show="showRectangle" class="btn btn-warning animate-rectangle" ng-class="{ extra: extraClass }">i am the rectangle</div>
       </div>
     </div>
     <!-- scripts -->
@@ -29,4 +29,3 @@
     <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
-
