--- a/angular/projects/madlibs/part4/index.html
+++ b/angular/projects/madlibs/part4/index.html
@@ -21,7 +21,7 @@
     <!-- inputs -->
     <div class="row content" ng-hide="hideForm && madForm.$valid">
         <div class="col-md-8 col-md-offset-2 border override">
-            <form name="madForm" ng-submit="submitted=true">
+            <form name="madForm" ng-submit="submitted=true;submit()">
                 <div class="row text-center">
                     <h2>Select a gender:</h2>
                     <input type="radio" ng-checked="{{gender.pronoun == 'he'}}" ng-click="gender.pronoun='he';gender.poss='his'" id="male" name="gender" value="male" placeholder="">
@@ -48,7 +48,7 @@
                     <input type="text" placeholder="adjective" ng-model="data.adjective" required>
                 </div>
                 <div class="row text-center">
-                    <button type="submit" ng-click="submit()" class="btn btn-lg btn-default submit-btn">Submit</button>
+                    <button type="submit" class="btn btn-lg btn-default submit-btn">Submit</button>
                 </div>
             </form>
         </div>
@@ -73,6 +73,6 @@
     <!-- scripts -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-animate.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
