--- a/angular/projects/active-link-routing-example/index.html
+++ b/angular/projects/active-link-routing-example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular Promises Example</title>
+  <title>Angular isActive Example</title>
   <!-- styles -->
   <link href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/yeti/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="main.css" rel="stylesheet" media="screen">
