added basic login

--- a/angular/projects/angular-flashcards/app/index.html
+++ b/angular/projects/angular-flashcards/app/index.html
@@ -65,7 +65,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angularLocalStorage/src/angularLocalStorage.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/quiz.js"></script>
     <script src="scripts/controllers/question.js"></script>
