--- a/angular/projects/madlibs/part3/index.html
+++ b/angular/projects/madlibs/part3/index.html
@@ -1,84 +1,117 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ngMadlibs" ng-controller="madlibsController">
+<html lang="en" ng-app="ngMadlibs">
   <head>
     <title>ngMadLibs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/yeti/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/main.css" rel="stylesheet" media="screen">
   </head>
-  <body>
-    <div class="container">
+    <body ng-controller="madlibsController" class="container">
+
+    <br>
+
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="row">
             <div class="col-md-4">
-              <img src="img/mad-lib-happy-face.png" id="smile">
+              <img src="img/mad-lib-happy-face.png" class="smile">
             </div>
             <div class="col-md-8">
-              <img src="img/ng-mad-libs-logo.png">
+              <img src="img/ng-mad-libs-logo.png" alt="">
             </div>
           </div>
-          <div id="inputs">
-            <form name="madForm" id="myMadForm">
-              <h2>Please select a gender:</h2>
-              <div class="form-group dropdown">
-                <select class="form-control" name="gender" ng-model="formData.gender" required>
-                  <option>Male</option>
-                  <option>Female</option>
-                </select>
-              </div>
-              <h2>Please provide the following words:</h2>
-              <p>&nbsp;All fields are required!</p>
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="form-group" ng-class="{'has-error' : madForm.name.$invalid && !madForm.name.$pristine}">
-                    <input type="text" name="name" class="form-control" ng-model="formData.name" placeholder="Name" required>
-                  </div>
-                  <div class="form-group" ng-class="{'has-error' : madForm.jobTitle.$invalid && !madForm.jobTitle.$pristine}">
-                    <input type="text" name="jobTitle" class="form-control" placeholder="Job Title" ng-model="formData.jobTitle" required>
-                  </div>
-                  <div class="form-group" ng-class="{'has-error' : madForm.tediusTask.$invalid && !madForm.tediusTask.$pristine}">
-                    <input type="text" class="form-control" name="tediusTask" placeholder="Tedius Task" ng-model="formData.tediousTask" required>
+          <div class="madLib-input row" ng-show="display === 0">
+
+            <h2>Please Provide the following words:</h2>
+            <p>All fields are required!</p>
+
+            <br><br>
+
+            <div class="input">
+              <form name="madLibForm" ng-submit="submitForm()" novalidate>
+
+                <div class="col-md-4 male-name">
+                  <input class="form-control" required type="text" ng-model="male" name="male" placeholder="Male Name">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.male.$error">
+                    <span class="error" ng-message="required">Field is required!</span>
                   </div>
                 </div>
-                <div class="col-md-4">
-                  <div class="form-group" ng-class="{'has-error' : madForm.dirtyTask.$invalid && !madForm.dirtyTask.$pristine}">
-                    <input type="text" class="form-control" name="dirtyTask" placeholder="Dirty Task" ng-model="formData.dirty_task" required>
-                  </div>
-                  <div class="form-group" ng-class="{'has-error' : madForm.celebrity.$invalid && !madForm.celebrity.$pristine}">
-                    <input type="text" class="form-control" name="celebrity" placeholder="Celebrity" ng-model="formData.celebrity" required>
-                  </div>
-                  <div class="form-group" ng-class="{'has-error' : madForm.uselessSkill.$invalid && !madForm.uselessSkill.$pristine}">
-                    <input type="text" class="form-control" name="uselessSkill" placeholder="Useless Skill" ng-model="formData.uselessSkill" required>
+
+                <div class="col-md-4 dirty-task">
+                  <input class="form-control" required type="text" ng-model="dirty" name="dirty" placeholder="Dirty Task">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.dirty.$error">
+                    <span class="error" ng-message="required">Field is required!</span>
                   </div>
                 </div>
-                <div class="col-md-4">
-                  <div class="form-group" ng-class="{'has-error' : madForm.adjective.$invalid && !madForm.adjective.$pristine}">
-                    <input type="text" class="form-control" name="adjective" placeholder="Adjective" ng-model="formData.adjective" required>
-                  </div>
-                  <div class="form-group" ng-class="{'has-error' : madForm.obnoxiousCelebrity.$invalid && !madForm.obnoxiousCelebrity.$pristine}">
-                    <input type="text" class="form-control" name="obnoxousCelebrity" placeholder="Obnoxious Celebrity" ng-model="formData.obnoxiousCelebrity" required>
-                  </div>
-                  <div class="form-group" ng-class="{'has-error' : madForm.hugeNumber.$invalid && !madForm.hugeNumber.$pristine}">
-                    <input type="number" class="form-control" name="hugeNumber" placeholder="Huge Number" ng-model="formData.hugeNumber" required>
+
+                <div class="col-md-4 obnoxious">
+                  <input class="form-control" required type="text" ng-model="obnox" name="obnox" placeholder="Obnoxious Celebrity">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.obnox.$error">
+                    <span class="error" ng-message="required">Field is required!</span>
                   </div>
                 </div>
-              </div>
-              <button ng-hide="isSubmitted" type="submit" ng-click="submitForm()" class="btn btn-primary" ng-disabled="madForm.$invalid">Submit</button>
-              <button type="button" class="btn btn-success" id="reset-btn" ng-click="reset()">Reset?</button>
-            </form>
+
+                <div class="col-md-4 job-title">
+                  <input class="form-control" required type="text" ng-model="job" name="job" placeholder="Job Title">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.job.$error">
+                    <span class="error" ng-message="required">Field is required!</span>
+                  </div>
+                </div>
+
+                <div class="col-md-4 celeb">
+                  <input class="form-control" required type="text" ng-model="celeb" name="celeb" placeholder="Celebrity">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.celeb.$error">
+                    <span class="error" ng-message="required">Field is required!</span>
+                  </div>
+                </div>
+
+                <div class="col-md-4 huge-number">
+                  <input class="form-control" required type="number" ng-model="huge" name="huge" placeholder="Huge Number">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.huge.$error">
+                     <span class="error" ng-message="required">Field is required!</span>
+                     <span class="error" ng-message="number">Please use a Number!</span>
+                  </div>
+                </div>
+
+                <div class="col-md-4 tedious">
+                  <input class="form-control" required type="text" ng-model="tedious" name="tedious" placeholder="Tedious Task">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.tedious.$error">
+                     <span class="error" ng-message="required">Field is required!</span>
+                  </div>
+                </div>
+
+                <div class="col-md-4 useless">
+                  <input class="form-control" required type="text" ng-model="useless" name="useless" placeholder="Useless Skill">
+                 <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.useless.$error">
+                     <span class="error" ng-message="required">Field is required!</span>
+                  </div>
+                </div>
+
+                <div class="col-md-4 adjective">
+                  <input class="form-control" required type="text" ng-model="adjective" name="adjective" placeholder="Adjective">
+                  <div ng-if="madLibForm.$submitted" ng-messages="madLibForm.adjective.$error">
+                    <span class="error" ng-message="required">Field is required!</span>
+                  </div>
+                </div>
+
+                <input class="btn btn-primary" type="submit" name="submit" value="Generate My Mad Lib">
+              </form>
+            </div>
           </div>
-          <hr>
-          <h4 id="male-text"><span class="input">{{ formData.name }}</span> was a <span class="input">{{ formData.jobTitle }}</span> who loved technology. Although he loved parts of his job, he absolutely hated  <span class="input">{{ formData.tediousTask }}</span> and <span class="input">{{ formData.dirtyTask }}</span>. So, <span class="input">{{ formData.name }}</span> met with his life mentor <span class="input">{{ formData.celebrity }}</span> who told him to learn how to <span class="input">{{ formData.uselessSkill }}</span> with Thinkful. Thinkful didn't offer a course on <span class="input">{{ formData.uselessSkill }}</span> so he studied programming instead.</p>
-          <p>What a great decision! With his new skills, <span class="input">{{ formData.name }}</span> built a(n) <span class="input">{{ formData.adjective }}</span> robot named <span class="input">{{ formData.obnoxiousCelebrity }}</span> that not only loved <span class="input">{{ formData.dirtyTask }}</span> but did it <span class="input">{{ formData.hugeNumber }}</span> faster.</h4>
-          <h4 id="female-text"><span class="input">{{ formData.name }}</span> was a <span class="input">{{ formData.jobTitle }}</span> who loved technology. Although she loved parts of her job, she absolutely hated  <span class="input">{{ formData.tediousTask }}</span> and <span class="input">{{ formData.dirtyTask }}</span>. So, <span class="input">{{ formData.name }}</span> met with her life mentor <span class="input">{{ formData.celebrity }}</span> who told her to learn how to <span class="input">{{ formData.uselessSkill }}</span> with Thinkful. Thinkful didn't offer a course on <span class="input">{{ formData.uselessSkill }}</span> so she studied programming instead.</p>
-          <p>What a great decision! With her new skills, <span class="input">{{ formData.name }}</span> built a(n) <span class="input">{{ formData.adjective }}</span> robot named <span class="input">{{ formData.obnoxiousCelebrity }}</span> that not only loved <span class="input">{{ formData.dirtyTask }}</span> but did it <span class="input">{{ formData.hugeNumber }}</span> faster.</h4>
+
+          <div class="madlib row" ng-hide="display === 0">
+            <div class="col-md-10 col-md-offset-1">
+               <p> <span>{{male}}</span> was a <span>{{job}}</span> who loved technology. Although he loved parts of his job, he absolutely hated  <span>{{tedious}}</span> and <span>{{dirty}}</span>. So, <span>{{male}}</span> met with his life mentor <span>{{celeb}}</span> who told him to learn how to <span>{{useless}}</span> with Thinkful. Thinkful didn't offer a course on <span>{{useless}}</span> so he studied programming instead.</p><br><br>
+              <p>What a great decision! With his new skills, <span>{{male}}</span> built a(n) <span>{{adjective}}</span> robot named <span>{{obnox}}</span> that not only loved <span>{{dirty}}</span> but did it <span>{{huge}}</span> times faster. </p>
+              <input class="btn btn-success" type="submit" ng-click="reset()" value="Start Over">
+            </div>
+          </div>
+
         </div>
       </div>
-    </div>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular.min.js" type="text/javascript"></script>
-    <script src="js/main.js"></script>
-  </body>
+      </div> <!-- /container -->
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-messages.js"></script>
+      <script src="js/main.js"></script>
+    </body>
 </html>
