--- a/angular/projects/countries_capitals/app/index.html
+++ b/angular/projects/countries_capitals/app/index.html
@@ -30,6 +30,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-mocks/angular-mocks.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="js/main.js"></script>
   <script src="js/controllers.js"></script>
