--- a/angular/projects/angular-shopping-cart/src/index.html
+++ b/angular/projects/angular-shopping-cart/src/index.html
@@ -4,22 +4,21 @@
     <meta charset="utf-8">
     <title>Angular Shopping Cart</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
   </head>
    <body ng-cloak>
 
     <div class="container">
       <br>
-      <nav-bar></nav-bar>
+      <div ng-include="'partials/header.html'"></div>
       <div ng-view></div>
     </div>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.10/angular.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.10/angular-route.js"></script>
-    <script type="text/javascript" src="./app/app.js"></script>
-    <script type="text/javascript" src="./app/routes.js"></script>
-    <script type="text/javascript" src="./app/controllers.js"></script>
-    <script type="text/javascript" src="./app/services.js"></script>
-    <script type="text/javascript" src="./app/components/nav-bar/nav-bar.directive.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./js/routes.js"></script>
+    <script type="text/javascript" src="./js/controllers.js"></script>
+    <script type="text/javascript" src="./js/services.js"></script>
   </body>
 </html>
