added ng kittens

--- a/angular/projects/angular-kittens/src/index.html
+++ b/angular/projects/angular-kittens/src/index.html
@@ -33,7 +33,11 @@
     </nav>
 
     <div class="container">
-      <div ng-view></div>
+      <div class="row">
+        <div class="col-md-6">
+          <div ng-view></div>
+        </div>
+      </div>
     </div>
     <!-- scripts -->
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
