refactored and added a service

--- a/angular/projects/angular-kittens/src/index.html
+++ b/angular/projects/angular-kittens/src/index.html
@@ -34,7 +34,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-8">
           <div ng-view></div>
         </div>
       </div>
@@ -46,9 +46,12 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.10/angular-route.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/services.js"></script>
     <!-- main component -->
     <script type="text/javascript" src="js/components/main/main.controller.js"></script>
     <!-- kittens component -->
     <script type="text/javascript" src="js/components/kittens/kittens.controller.js"></script>
+    <!-- comments component -->
+    <script type="text/javascript" src="js/components/comments/comments.controller.js"></script>
   </body>
 </html>
